# vowpalwabbit-prediction-swig-wrapper

./: CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/attribute/: context_info.h  doc_attributes.h  recent_doc.h  user_profile.h
core/include/config/: configuration.h
core/include/feature/: feature_engineering_base.h  feature_engineering_location.h  feature_engineering_recent_docs_similarity.h  feature_engineering_time.h  feature_engineering_user_doc_similarity.h  feature_hash.h  feature_hashing.h  features.h  vector_space_feature_helper.h  vw_categorical_feature.h  vw_feature.h  vw_realvalued_feature.h
core/include/log/: pctr_log.h
core/include/model/: linear_model.h  model.h  model_daemon.h  word2vec_model.h
core/include/prediction/: linear_predictor.h
core/src/feature/: feature_engineering_base.cpp  feature_engineering_location.cpp  feature_engineering_recent_docs_similarity.cpp  feature_engineering_time.cpp  feature_engineering_user_doc_similarity.cpp  feature_hash.cpp  feature_hashing.cpp  features.cpp  vector_space_feature_helper.cpp  vw_categorical_feature.cpp  vw_realvalued_feature.cpp
core/src/log/: pctr_log.cpp
core/src/model/: linear_model.cpp  model_daemon.cpp  word2vec_model.cpp
core/src/prediction/: linear_predictor.cpp
core/src/vw_hashing/: hash.cpp  parse_primitives.cpp  vw_exception.cpp
pctr_logs/unit_test/: unit_test_log
swig/: CMakeLists.txt  pctr.i  pctr_swig_test.java
test/: CMakeLists.txt  main.cpp  test_configuration.cpp  test_feature_hashing.cpp  test_linear_model.cpp  test_model_daemon.cpp
test/data/: word2vec_model.bad.txt  word2vec_model.txt
test/googletest/googlemock/: CMakeLists.txt
test/googletest/googlemock/test/: gmock_test_utils.py
test/googletest/googletest/make/: sample1_unittest
test/src/: main.cpp
test/src/feature/: test_feature_engineering_base.cpp  test_feature_engineering_location.cpp  test_feature_engineering_recent_docs_similarity.cpp  test_feature_engineering_time.cpp  test_feature_engineering_user_doc_similarity.cpp  test_feature_hash.cpp
test/src/model/: test_linear_model.cpp  test_model_daemon.cpp  test_word2vec_model.cpp
test/src/murmurhash3/: test_murmurhash3.cpp
test/src/prediction/: test_linear_predictor.cpp
